# kiter

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DockerFile.u18  Makefile  README.md  RunningDac16.ipynb  SPeriodicCrunch.ipynb  ascent.sh  cmake_install.cmake  convert_minizinc.py  data.dzn  gen.sh  kiter.ipynb  router.sh  runres.sh  runres.txt  sample_cmd.txt  testrun.sh  verify_dse.sh  xml_to_csv.py  y.txt
.github/linters/: .jscpd.json
.github/workflows/: c-cpp.yml
benchmark/: 21.xml  BlackScholes.xml  Echo.xml  Pdectect.xml  expansion_paper_norm_sdf.xml  init_sample.xml  new_benchmark.xml  sample.xml
benchmark_sized/: Black-scholes.xml  H264.xml  Pdectect.xml
benchmarks/: 21.xml  NiknamFig1.xml  expansion_paper_norm_sdf.xml  expansion_paper_sdf.xml  faustExample.xml  faustTest.xml  fbf.txt  fbf2.txt  init_sample.xml  mp3_csdf.xml  multrate.xml  new_benchmark.xml  sample.xml  simpler_benchmark.xml  single_output_test.dsp-sig.xml  slides.xml  speriodic_presentation_sample.xml  speriodic_sample.xml  tdma0.xml  tdma1.xml  tdma2.xml  tdma3.xml  tester.xml  tiny.xml  tiny_r.xml
benchmarks/AGB5CSDF/: autogen1.xml  autogen2.xml  autogen3.xml  autogen4.xml  autogen5.xml
benchmarks/IB5CSDF/: BlackScholes.xml  BlackScholes_sized.xml  Echo.xml  Echo_sized.xml  H264.xml  H264_sized.xml  JPEG2000.xml  JPEG2000_sized.xml  PDectect.xml  PDectect_sized.xml
benchmarks/NoCMotivation/: SimpleInitUseCase.xml  SimpleUseCase.xml  initUserCase.xml  lte_sdf_16.xml  merge_example.xml  merge_example2.xml  sdf_mapping.xml
build_results/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_results/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
latex_sample/: schedule_1periodic_sample.tex  scheduling.sty  test.tex
modules/: FindCPLEX.cmake  FindGUROBI.cmake
motivation/: initUserCase.xml  sdf_mapping.xml
src/: CMakeLists.txt
src/kiter/: CMakeLists.txt  main.cpp
src/kiter/tasks/: SchedulingKiterTask.h
src/libkiter/: CMakeLists.txt
src/libkiter/algorithms/: algorithms.h  backpressure.cpp  backpressure.h  buffer_sizing.cpp  buffer_sizing.h  buffersizing.h  degroote.cpp  degroote.h  experiments.h  kperiodic.cpp  kperiodic.h  mappings.h  normalization.cpp  normalization.h  nperiodic.cpp  nperiodic.h  periodic.cpp  periodic.h  periodic_fixed.cpp  periodic_fixed.h  phase_schedule_minmax.cpp  phase_schedule_minmax.h  repetition_vector.cpp  scc.cpp  scc.h  schedulings.h  software_noc.cpp  software_noc.h  symbolicExecution.cpp  symbolicExecution.h  symbolic_execution.cpp  symbolic_execution.h  transformations.h
src/libkiter/algorithms/buffersizing/: backpressure.cpp  backpressure.h  buffer_sizing.cpp  buffer_sizing.h  dse.cpp  periodic.cpp  periodic.h  periodic_fixed.cpp  periodic_fixed.h
src/libkiter/algorithms/dse/: base_monotonic_optimisation.cpp  base_monotonic_optimisation.h  buffer_sizing.cpp  buffer_sizing.h  kperiodic.cpp  kperiodic.h  monotonic_optimisation.cpp  monotonic_optimisation.h  periodic.cpp  periodic.h
src/libkiter/algorithms/experiments/: ExpansionGraph.cpp  ExpansionGraph.h  expansion_experiment.cpp  expansion_experiment.h
src/libkiter/algorithms/mapping/: BufferlessNoCMapAndRoute.cpp  createNoC.cpp  generateTDMA.cpp  modelCommunications.cpp  moduloMapping.cpp  randomMapping.cpp  randomRouting.cpp  xyRouting.cpp
src/libkiter/algorithms/mapping/bufferless_utils/: GraphMapper.h  SCCFinder.h
src/libkiter/algorithms/scheduling/: BufferlessNoCScheduling.cpp  CSDF_KPeriodicScheduling.cpp  CSDF_KPeriodicScheduling_LP.cpp  CSDF_RPeriodicScheduling.cpp  CSDF_SPeriodicScheduling.cpp  ExpansionGraph.h  KPeriodicSchedule.cpp  TDMAScheduler.cpp  TDMAScheduler.h  bufferLessAwareScheduling.cpp
src/libkiter/algorithms/throughput/: SDF3Wrapper.cpp  SDF3Wrapper.h  actor.cpp  actor.h  cons_prog.cpp  cons_prog.h  csdf_strictly_periodic.cpp  csdf_strictly_periodic.h  degroote.cpp  kperiodic.cpp  kperiodic.h  so4_noc.cpp  so4_noc.h  state.cpp  state.h  symbolic_execution.cpp  symbolic_execution.h
src/libkiter/algorithms/tools/: LTEGeneator.cpp  LTEGenerator.h
src/libkiter/algorithms/transformation/: bug_explorer.cpp  dynamicNoC.cpp  dynamicNoC.h  merging.cpp  merging.h  modelNoCMapping.cpp  remove_reentrancy.cpp  remove_reentrancy.h  singleOutput.cpp  singleOutput.h
src/libkiter/commons/: GroupList.h  KiterRegistry.h  NoCGraph.cpp  NoCGraph.h  SDF3Wrapper.cpp  SDF3Wrapper.h  Verbose.h  VerboseStream.h  basic_types.h  commons.cpp  commons.h  glpsol.cpp  glpsol.h  howard_cycle_ratio.hpp  mergetester.h  verbose.cpp  verbose.h
src/libkiter/generators/: LTEGeneator.cpp  LTEGenerator.h  RandomGenerator.cpp  RandomGenerator.h  generators.h
src/libkiter/lp/: glpsol.cpp  glpsol.h  glpsol_coin.cpp  glpsol_cplex.cpp  glpsol_gurobi.cpp
src/libkiter/models/: Dataflow.cpp  Dataflow.h  EventGraph.cpp  EventGraph.h  KiterTask.h  NoC.cpp  NoC.h  NoCGraph.cpp  NoCGraph.h  Scheduling.cpp  Scheduling.h  SchedulingKiterTask.h  SchedulingMod.cpp  SchedulingMod.h  repetition_vector.cpp  repetition_vector.h
src/libkiter/printers/: SDF3Wrapper.cpp  SDF3Wrapper.h  printers.h  stdout.cpp  stdout.h
src/tests/: CMakeLists.txt  DataflowTest.cpp  testBufferLessScheduling.cpp
tests/: CMakeLists.txt  CommonsTest.cpp  DataflowTest.cpp  EventGraphTest.cpp  FractionTest.cpp  MCRPTest.cpp  MappingTest.cpp  MergeTest.cpp  NewNamingTest.cpp  NormalizationTest.cpp  PerformanceTest.cpp  PeriodicSchedulingTest.cpp  PipelineNamingTest.cpp  RVPerfTest.cpp  RandomGeneratorTest.cpp  RepetitionVectorTest.cpp  RoutingTest.cpp  SDF3WriterTest.cpp  SchedulingTest.cpp  StdoutPrinterTest.cpp  StrictlyPeriodicTest.cpp  TestTemplate.cpp  UserCaseTest.cpp  ValidScheduleTest.cpp  VerboseTest.cpp  testBufferLessScheduling.cpp  test_helper.h
tests/helpers/: echo_buffered.h  mergetester.h  sample.h  (+2 more)
tools/: RunningDac16.ipynb  TDMA.md  ascent.sh  dsereader.py  generate_speriodic_table.py  install_sdf3.sh  kdse_run_benchmarks.sh  kiter.ipynb  processOutput.ipynb  sdf3.patch  speriodic_run_benchmarks.sh  verify_dse.sh  verify_kperiodic.sh  xml_to_csv.py
(+12 files in other folders)
